apps/helloworld/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld-app
  ports:
  # Default port used by the image
  - port: 5678
