apps/helloworld/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: helloworld.localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: helloworld-service
            port:
              number: 5678
